--- a/doc/mumps.tex
+++ b/doc/mumps.tex
@@ -84,9 +84,10 @@ Early introduction of a third vaccine dose during a mumps outbreak can be effect
 \textbf{Disclaimer.} The findings and conclusions in this report are those of the authors and do not necessarily represent the official position of the Centers for Disease Control and Prevention.
 
 \section*{Significance}
-The resurgence of mumps outbreaks in the US continues to raise questions about the need for third dose of the MMR vaccine, but existing estimates on the third-dose vaccine effectiveness are still limited.
-Here, we analyzed mumps outbreak that occurred at the University of Iowa between August 24, 2015 and May 13, 2016, using mathematical modeling approach, which allowed us to account for different sources of biases. 
-We estimate that school holidays likely had a greater impact on preventing mumps transmission than vaccination.
+The resurgence of mumps among vaccinated young adults in the US continues to raise questions about the need for a third dose of the MMR vaccine, but existing estimates of third-dose vaccine effectiveness are limited.
+We analyzed a mumps outbreak that occurred at the University of Iowa using a mathematical modeling approach which allowed us to account for different sources of biases. 
+We estimate that while vaccination played a role in improving protection of persons at increased risk and preventing transmission during the outbreak, its overall impact on outbreak control was uncertain. 
+However, school holidays likely had the greatest impact on preventing mumps transmission. 
 Our analysis further highlights the importance of early introduction of vaccination in preventing outbreaks.
 
 \section*{Keywords}
