--- a/doc/mumps.bib
+++ b/doc/mumps.bib
@@ -327,3 +327,126 @@ abstract = {The live-attenuated mumps-measles-rubella (MMR) vaccine has been hig
   year={2008},
   publisher={The University of Chicago Press}
 }
+
+@article{king2015statistical,
+  title={Statistical inference for partially observed Markov processes via the R package pomp},
+  author={King, Aaron A and Nguyen, Dao and Ionides, Edward L},
+  journal={arXiv preprint arXiv:1509.00503},
+  year={2015}
+}
+
+@article{park2021epidemiological,
+  title={{Epidemiological dynamics of enterovirus D68 in the United States and implications for acute flaccid myelitis}},
+  author={Park, Sang Woo and Pons-Salort, Margarita and Messacar, Kevin and Cook, Camille and Meyers, Lindsay and Farrar, Jeremy and Grenfell, Bryan T},
+  journal={Science Translational Medicine},
+  volume={13},
+  number={584},
+  pages={eabd2400},
+  year={2021},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{news,
+  title={{Should University of Iowa sophomores live on campus? Task force weighs pros and cons}},
+  author={Breaux, Aimee},
+  journal={Iowa City Press-Citizen},
+  year={2018},
+  note={\url{https://www.press-citizen.com/story/news/education/university-of-iowa/2018/08/10/university-iowa-considers-requiring-sophomores-live-campus-corm-residence-hall-von-stange/914124002/}}
+}
+
+@article{edmunds2000pre,
+  title={The pre-vaccination epidemiology of measles, mumps and rubella in Europe: implications for modelling studies},
+  author={Edmunds, W John and Gay, Nigel J and Kretzschmar, M and Pebody, RG and Wachmann, H},
+  journal={Epidemiology \& Infection},
+  volume={125},
+  number={3},
+  pages={635--650},
+  year={2000},
+  publisher={Cambridge University Press}
+}
+
+@article{farrington2001estimation,
+  title={Estimation of the basic reproduction number for infectious diseases from age-stratified serological survey data},
+  author={Farrington, C Paddy and Kanaan, Mona N and Gay, Nigel J},
+  journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+  volume={50},
+  number={3},
+  pages={251--292},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@article{majumder2017vaccine,
+  title={{Vaccine compliance and the 2016 Arkansas mumps outbreak}},
+  author={Majumder, Maimuna S and Nguyen, Colleen M and Cohn, Emily L and Hswen, Yulin and Mekaru, Sumiko R and Brownstein, John S},
+  journal={The Lancet infectious diseases},
+  volume={17},
+  number={4},
+  pages={361--362},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@article{shah2022containing,
+  title={Containing the spread of mumps on college campuses},
+  author={Shah, Mirai and Ferra, Gabrielle and Fitzgerald, Susan and Barreira, Paul J and Sabeti, Pardis C and Colubri, Andr{\'e}s},
+  journal={Royal Society Open Science},
+  volume={9},
+  number={1},
+  pages={210948},
+  year={2022},
+  publisher={The Royal Society}
+}
+
+@article{smith1984assessment,
+  title={Assessment of the protective efficacy of vaccines against common diseases using case-control and cohort studies},
+  author={Smith, PG and Rodrigues, LC and Fine, PEM},
+  journal={International journal of epidemiology},
+  volume={13},
+  number={1},
+  pages={87--93},
+  year={1984},
+  publisher={Oxford University Press}
+}
+
+@article{kanaan2002estimation,
+  title={Estimation of waning vaccine efficacy},
+  author={Kanaan, Mona N and Farrington, C Paddy},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={458},
+  pages={389--397},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@article{lam2020mumps,
+  title={Mumps: an update on outbreaks, vaccine efficacy, and genomic diversity},
+  author={Lam, Eugene and Rosen, Jennifer B and Zucker, Jane R},
+  journal={Clinical Microbiology Reviews},
+  volume={33},
+  number={2},
+  pages={10--1128},
+  year={2020},
+  publisher={Am Soc Microbiol}
+}
+
+@article{yang2024assessing,
+  title={Assessing population-level target product profiles of universal human influenza a vaccines},
+  author={Yang, Qiqi and Park, Sang Woo and Saad-Roy, Chadi M and Ahmad, Isa and Viboud, C{\'e}cile and Arinaminpathy, Nimalan and Grenfell, Bryan T},
+  journal={Epidemics},
+  pages={100776},
+  year={2024},
+  publisher={Elsevier}
+}
+
+@article{marziano2021effect,
+  title={{The effect of COVID-19 vaccination in Italy and perspectives for living with the virus}},
+  author={Marziano, Valentina and Guzzetta, Giorgio and Mammone, Alessia and Riccardo, Flavia and Poletti, Piero and Trentini, Filippo and Manica, Mattia and Siddu, Andrea and Bella, Antonino and Stefanelli, Paola and others},
+  journal={Nature communications},
+  volume={12},
+  number={1},
+  pages={7272},
+  year={2021},
+  publisher={Nature Publishing Group UK London}
+}
